<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_share">Share</string>
    <string name="action_show_pref_loc">Show preferred location</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">94043</string>

    <string name="pref_measurement_units_label">Temperature Units</string>
    <string name="pref_measurement_units_key" translatable="false">Temperature Units</string>
    <string name="pref_measurement_units_default" translatable="false">Celcius</string>
</resources>
