<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"/>
    <ListPreference
        android:title="@string/pref_measurement_units_label"
        android:entries="@array/temperature_list_entries"
        android:entryValues="@array/temperature_list_values"
        android:defaultValue="@string/pref_measurement_units_default"
        android:key="@string/pref_measurement_units_key" />
</PreferenceScreen>
